31 May 2001 Correct TLB purging on SIE dispatch - Jan Jaeger
31 May 2001 IVSK SIE fix - Paul Leisy
30 May 2001 Added CHSC channel subsystem call instruction - Jan Jaeger
28 May 2001 Fix logic error in CPU interlocking - Jan Jaeger
28 May 2001 Wakeup waiting CPU when interrupt key is processed - Jan Jaeger
27 May 2001 Correct mainstorage interlocked update/reference - Jan Jaeger
26 May 2001 Add _REENTRANT and _THREAD_SAFE flags - Jan Jaeger
25 May 2001 Various multi processing and SIE fixes - Jan Jaeger
24 May 2001 Performance enhancements - Juergen Dobrinski
24 May 2001 Added CGEBR/CGDBR - Jan Jaeger
24 May 2001 Added CEGBR/CDGBR - Kris
23 May 2001 CKD 9345 support - Greg Smith
21 May 2001 Correct availability of N3 instructions in S/390 mode - Jan Jaeger
19 May 2001 Compression corrections - Bernard van der Helm
19 May 2001 Include basic crypto support - Jan Jaeger
19 May 2001 Correct multiply/divide long - Jan Jaeger
19 May 2001 Correct RCP host address when nonzero MSO - Paul Leisy
18 May 2001 Correct CEFBR/CFEBR register use - Jan Jaeger
18 May 2001 Correct STOSM/STNSM interception - Paul Leisy
18 May 2001 Correct TRAP save area page crosser - Paul Leisy
18 May 2001 Correct operation exception interception - Paul Leisy
17 May 2001 Correct address wrap when SIE is interrupted - Jan Jaeger
17 May 2001 Correct specification exception interception - Jan Jaeger
16 May 2001 Correct CPU addr in PSA during external interrupts - Paul Leisy
15 May 2001 Correct STFL installed facility bit settings - Jan Jaeger
15 May 2001 Correct PR register update - Jan Jaeger
15 May 2001 Correct prefix storage key update in TPI - Jan Jaeger
15 May 2001 Correct TEA on STURA/LURA protection exception - Paul Leisy
09 May 2001 Correct TRT address wrap - Paul Leisy
08 May 2001 Fixes for RP instruction - Paul Leisy
08 May 2001 Fix gr15 in TRAP instruction - Paul Leisy
07 May 2001 CMPSC fix - Bernard van der Helm
07 May 2001 Correct false data exception in CVDG - Jan Jaeger