@@ -407,6 +407,8 @@ static char *pgmintname[] = {
       || code == PGM_SPECIFICATION_EXCEPTION
       || code == PGM_TRANSLATION_SPECIFICATION_EXCEPTION ))
     {
+            realregs->psw.ilc = (realregs->inst[0] < 0x40) ? 2 :
+                                (realregs->inst[0] < 0xC0) ? 4 : 6;
             realregs->psw.IA += realregs->psw.ilc;
             realregs->psw.IA &= ADDRESS_MAXWRAP(realregs);
     }
@@ -922,258 +924,6 @@ void *cpu_thread (REGS *regs)
 #endif /*!defined(_GEN_ARCH)*/
 
 
-#if 0
-void ARCH_DEP(run_cpu) (REGS *regs)
-{
-int     tracethis;                      /* Trace this instruction    */
-int     stepthis;                       /* Stop on this instruction  */
-int     shouldbreak;                    /* 1=Stop at breakpoint      */
-U32     prevmask;
-
-    /* Establish longjmp destination for program check */
-    setjmp(regs->progjmp);
-
-    /* Reset instruction trace indicators */
-    tracethis = 0;
-    stepthis = 0;
-
-    while (1)
-    {
-#if 0
-        U32 oldmask = regs->ints_mask;
-	    SET_IC_EXTERNAL_MASK(regs);
-	    SET_IC_IO_MASK(regs);
-	    SET_IC_MCK_MASK(regs);
-            if( oldmask != regs->ints_mask)
-            {
-                logmsg("Interrupt mask error oldmask=%8.8x, newmask=%8.8x\n",
-                  oldmask,regs->ints_mask);
-                ARCH_DEP(display_inst) (regs, regs->instvalid ? regs->inst : NULL);
-            }
-#endif
-        
-        /* Test for interrupts if it appears that one may be pending */
-        if( IC_INTERRUPT_CPU(regs) )
-        {
-            /* Obtain the interrupt lock */
-            obtain_lock (&sysblk.intlock);
-
-            if( OPEN_IC_DEBUG(regs) )
-            {
-                prevmask = regs->ints_mask;
-	        SET_IC_EXTERNAL_MASK(regs);
-	        SET_IC_IO_MASK(regs);
-	        SET_IC_MCK_MASK(regs);
-	        if(prevmask != regs->ints_mask)
-		{
-	            logmsg("CPU MASK MISMATCH: %8.8X - %8.8X. Last instruction:\n",
-		       prevmask, regs->ints_mask);
-		       ARCH_DEP(display_inst) (regs, regs->inst);
-		}
-	    }
-
-#if MAX_CPU_ENGINES > 1
-            /* Perform broadcasted purge of ALB and TLB if requested
-               synchronize_broadcast() must be called until there are
-               no more broadcast pending because synchronize_broadcast()
-               releases and reacquires the mainlock. */
-            while (sysblk.brdcstncpu != 0)
-                ARCH_DEP(synchronize_broadcast)(regs);
-#endif /*MAX_CPU_ENGINES > 1*/
-
-            /* Take interrupts if CPU is not stopped */
-            if (regs->cpustate == CPUSTATE_STARTED)
-            {
-                /* If a machine check is pending and we are enabled for
-                   machine checks then take the interrupt */
-                if (OPEN_IC_MCKPENDING(regs))
-                {
-                    PERFORM_SERIALIZATION (regs);
-                    PERFORM_CHKPT_SYNC (regs);
-                    ARCH_DEP (perform_mck_interrupt) (regs);
-                }
-
-                /* If enabled for external interrupts, invite the
-                   service processor to present a pending interrupt */
-                if ( OPEN_IC_EXTPENDING(regs) )
-                {
-                    PERFORM_SERIALIZATION (regs);
-                    PERFORM_CHKPT_SYNC (regs);
-                    ARCH_DEP (perform_external_interrupt) (regs);
-                }
-
-                /* If an I/O interrupt is pending, and this CPU is
-                   enabled for I/O interrupts, invite the channel
-                   subsystem to present a pending interrupt */
-                if( OPEN_IC_IOPENDING(regs) )
-                {
-                    PERFORM_SERIALIZATION (regs);
-                    PERFORM_CHKPT_SYNC (regs);
-                    ARCH_DEP (perform_io_interrupt) (regs);
-                }
-
-            } /*if(cpustate == CPU_STARTED)*/
-
-            /* If CPU is stopping, change status to stopped */
-            if (regs->cpustate == CPUSTATE_STOPPING)
-            {
-                /* Change CPU status to stopped */
-                regs->cpustate = CPUSTATE_STOPPED;
-
-                if (!regs->cpuonline)
-                {
-                    /* Remove this CPU from the configuration. Only do this
-                       when no synchronization is in progress as the
-                       synchronization process relies on the number of CPU's
-                       in the configuration to accurate. The first thing
-                       we do during interrupt processing is synchronize
-                       the broadcast functions so we are safe to manipulate
-                       the number of CPU's in the configuration.  */
-
-                    sysblk.numcpu--;
-
-#ifdef FEATURE_VECTOR_FACILITY
-                    /* Mark Vector Facility offline */
-                    regs->vf->online = 0;
-#endif /*FEATURE_VECTOR_FACILITY*/
-
-                    release_lock(&sysblk.intlock);
-
-                    /* Thread exit */
-                    return;
-                }
-
-                /* If initial CPU reset pending then perform reset */
-                if (regs->sigpireset)
-                {
-                    PERFORM_SERIALIZATION (regs);
-                    PERFORM_CHKPT_SYNC (regs);
-                    ARCH_DEP (initial_cpu_reset) (regs);
-                }
-
-                /* If a CPU reset is pending then perform the reset */
-                if (regs->sigpreset)
-                {
-                    PERFORM_SERIALIZATION (regs);
-                    PERFORM_CHKPT_SYNC (regs);
-                    ARCH_DEP(cpu_reset) (regs);
-                }
-
-                /* Store status at absolute location 0 if requested */
-                if (IS_IC_STORSTAT(regs))
-                {
-                    OFF_IC_STORSTAT(regs);
-                    ARCH_DEP(store_status) (regs, 0);
-                }
-            } /* end if(cpustate == STOPPING) */
-
-            /* Perform restart interrupt if pending */
-            if (IS_IC_RESTART(regs))
-            {
-                PERFORM_SERIALIZATION (regs);
-                PERFORM_CHKPT_SYNC (regs);
-                OFF_IC_RESTART(regs);
-                ARCH_DEP(restart_interrupt) (regs);
-            } /* end if(restart) */
-
-            /* This is where a stopped CPU will wait */
-            if (regs->cpustate == CPUSTATE_STOPPED)
-            {
-                /* Wait until there is work to do */
-                while (regs->cpustate == CPUSTATE_STOPPED)
-                {
-                    wait_condition (&sysblk.intcond, &sysblk.intlock);
-                }
-                release_lock (&sysblk.intlock);
-                /* If the architecture mode has changed we must adapt */
-                if(sysblk.arch_mode != regs->arch_mode)
-                    longjmp(regs->archjmp,0);
-                continue;
-            } /* end if(cpustate == STOPPED) */
-
-            /* Test for wait state */
-            if (regs->psw.wait)
-            {
-                /* Test for disabled wait PSW and issue message */
-                if( IS_IC_DISABLED_WAIT_PSW(regs) )
-                {
-                    logmsg ("CPU%4.4X: Disabled wait state\n",regs->cpuad);
-                    display_psw (regs);
-                    regs->cpustate = CPUSTATE_STOPPING;
-                    ON_IC_CPU_NOT_STARTED(regs);
-                    INVALIDATE_AIA(regs);
-                    INVALIDATE_AEA_ALL(regs);
-                    release_lock (&sysblk.intlock);
-                    continue;
-                }
-
-                INVALIDATE_AIA(regs);
-
-                INVALIDATE_AEA_ALL(regs);
-
-                /* Wait for I/O, external or restart interrupt */
-                wait_condition (&sysblk.intcond, &sysblk.intlock);
-                release_lock (&sysblk.intlock);
-                continue;
-            } /* end if(wait) */
-
-            /* Release the interrupt lock */
-            release_lock (&sysblk.intlock);
-
-        } /* end if(interrupt) */
-
-        /* Clear the instruction validity flag in case an access
-           error occurs while attempting to fetch next instruction */
-        regs->instvalid = 0;
-
-        /* Fetch the next sequential instruction */
-        INSTRUCTION_FETCH(regs->inst, regs->psw.IA, regs);
-
-        /* Set the instruction validity flag */
-        regs->instvalid = 1;
-
-        /* Count instruction usage */
-        regs->instcount++;
-
-// if(regs->psw.IA > 0x05148000 && regs->psw.IA < 0x5149060) { tracethis = 1; ON_IC_TRACE; }
-        if( IS_IC_TRACE )
-            {
-
-            /* Test for breakpoint */
-            shouldbreak = sysblk.instbreak
-                            && (regs->psw.IA == sysblk.breakaddr);
-
-            /* Display the instruction */
-            if (sysblk.insttrace || sysblk.inststep || shouldbreak
-                || tracethis || stepthis)
-            {
-                ARCH_DEP(display_inst) (regs, regs->inst);
-                if (sysblk.inststep || stepthis || shouldbreak)
-                {
-                    /* Put CPU into stopped state */
-                    regs->cpustate = CPUSTATE_STOPPED;
-                    ON_IC_CPU_NOT_STARTED(regs);
-    
-                    /* Wait for start command from panel */
-                    obtain_lock (&sysblk.intlock);
-                    while (regs->cpustate == CPUSTATE_STOPPED)
-                        wait_condition (&sysblk.intcond, &sysblk.intlock);
-                    release_lock (&sysblk.intlock);
-                }
-            }
-    
-            /* Reset instruction trace indicators */
-            tracethis = 0;
-            stepthis = 0;
-
-        }
-
-        /* Execute the instruction */
-        EXECUTE_INSTRUCTION (regs->inst, 0, regs);
-    }
-
-} /* end function cpu_thread */
-#else
 void ARCH_DEP(process_interrupt)(REGS *regs)
 {
             /* Obtain the interrupt lock */
@@ -1395,26 +1145,6 @@ int     stepthis;                       /* Stop on this instruction  */
     tracethis = 0;
     stepthis = 0;
 
-#if 0
-    if( pthread_mutex_trylock(&sysblk.mainlock) )
-        tracethis = 1;
-    else
-        pthread_mutex_unlock(&sysblk.mainlock);
-
-    if( pthread_mutex_trylock(&sysblk.intlock) )
-        logmsg("Error: intlock held\n")
-    else
-        pthread_mutex_unlock(&sysblk.intlock);
-#endif
-
-#if 0
-    SET_IC_EXTERNAL_MASK(regs);
-    SET_IC_IO_MASK(regs);
-    SET_IC_MCK_MASK(regs);
-    SET_IC_PSW_WAIT(regs);
-    SET_IC_TRACE;
-#endif
-
     while (1)
     {
 #if 0
@@ -1485,8 +1215,6 @@ int     stepthis;                       /* Stop on this instruction  */
 
     }
 } /* end function cpu_thread */
-
-#endif
 
 
 #if !defined(_GEN_ARCH)
