@@ -5,8 +5,8 @@
 /* Default features						     */
 /*   All existing features MUST be #undef-ed here.		     */
 /*-------------------------------------------------------------------*/
-#define MAX_CPU_ENGINES 	     16 /* Maximum number of engines */
-#define SMP_SERIALIZATION		/* Serialize storage for SMP */
+#define MAX_CPU_ENGINES 	      1 /* Maximum number of engines */
+#undef  SMP_SERIALIZATION		/* Serialize storage for SMP */
 #define VECTOR_SECTION_SIZE	    128 /* Vector section size	     */
 #define VECTOR_PARTIAL_SUM_NUMBER     1 /* Vector partial sum number */
 #define CKD_MAXFILES		      4 /* Max files per CKD volume  */
@@ -28,16 +28,6 @@
 #undef  OPTION_INSTRUCTION_COUNTING	/* First use trace and count */
 #define OPTION_CKD_KEY_TRACING		/* Trace CKD search keys     */
 #undef	OPTION_CMPSC_DEBUGLVL	   /* 3 ** 1=Exp 2=Comp 3=Both debug */
-
-
-/* <fenv.h> has not been ported by CygWin yet; thus it does not apply for WIN32 builds */
-
-#if defined(WIN32)
-#define OPTION_NO_IEEE_SUPPORT          /* No/downlevel IEEE support */
-#else
-#undef  OPTION_NO_IEEE_SUPPORT          /* No/downlevel IEEE support */
-#endif
-
 
 #define FEATURE_ALD_FORMAT            0
 
